enhancement(#313): Generate memory parts